--- a/ferramenta_mapa/index.html
+++ b/ferramenta_mapa/index.html
@@ -40,7 +40,7 @@
 <body class="bg-gray-100">
 
     <header class="bg-white shadow-md h-20 flex items-center justify-between px-6 z-50">
-        <h1 class="text-3xl font-bold text-blue-600">UrbanMinds</h1>
+        <h1 class="text-3xl font-bold text-blue-600"><a href="../index.html"><img src="./logo_Urbanminds.PNG" style="width: 300px; margin-bottom: 25px;"></a></h1>
         <p class="text-slate-600 text-center">Explore a saúde da vegetação e pontos de análise em cidades globais.</p>
     </header>
 
