--- a/mapainterativo.html
+++ b/mapainterativo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UrbanMinds - Análise Urbana com Dados da NASA</title>
+    <title>UrbanMinds</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
@@ -40,8 +40,8 @@
 <body class="bg-gray-100">
 
     <header class="bg-white shadow-md h-20 flex items-center justify-between px-6 z-50">
-        <h1 class="text-3xl font-bold text-blue-600"><a href="../index.html"><img src="./logo_Urbanminds.PNG" style="width: 300px; margin-bottom: 25px;"></a></h1>
-        <p class="text-slate-600 text-center">Explore a saúde da vegetação e pontos de análise em cidades globais.</p>
+        <h1 class="text-3xl font-bold text-blue-600"><a href="./index.html"><img src="./imgs/logo_Urbanminds.PNG" style="width: 300px; margin-bottom: 25px;"></a></h1>
+        <p class="text-slate-600 text-center">Explore vegetation health and analysis points in global cities.</p>
     </header>
 
     <main><div id="map"></div></main>
