fix map subtitles

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="map-header">
                     <h2 class="map-title">Environmental consultation map</h2>
                     <p class="map-description">
-                        Choose one of the indicators and the region where you want to have a consultation.
+                        Click on the map to explore environmental data for different locations. The map provides information on various indicators
                     </p>
                 </div>
                 <div class="map-grid">
