--- a/index.html
+++ b/index.html
@@ -192,6 +192,17 @@
                             <P class="member-function">Copywriter</P>
                         </div>
                     </div>
+
+                    <div class="team-member-card">
+                        <div class="profile-wrapper">
+                            <img src="./imgs/members/arinaldo_avatar.jpeg" alt="Arinaldo de Oliveira" class="profile-photo">
+                            <div class="indicator-icon flag-go"></div> </div>
+                        <div class="member-info">
+                            <p class="member-name">Arinaldo de Oliveira</p>
+                            <p class="member-name-surname"></p>
+                            <P class="member-function">Advisor</P>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
